// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-preset-nodely when browser targets passed in should provide expected config 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    "@babel/plugin-proposal-optional-chaining",
    "@babel/plugin-syntax-dynamic-import",
    "@babel/plugin-syntax-object-rest-spread",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "loose": true,
        "targets": Object {
          "browsers": Array [
            "last 2 versions",
            "ie10",
          ],
        },
      },
    ],
    "@babel/flow",
    "@babel/react",
  ],
}
`;

exports[`babel-preset-nodely when loose is set to false should provide expected config 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": false,
      },
    ],
    "@babel/plugin-proposal-optional-chaining",
    "@babel/plugin-syntax-dynamic-import",
    "@babel/plugin-syntax-object-rest-spread",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "loose": false,
      },
    ],
    "@babel/flow",
    "@babel/react",
  ],
}
`;

exports[`babel-preset-nodely when loose is set to true should provide expected config 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    "@babel/plugin-proposal-optional-chaining",
    "@babel/plugin-syntax-dynamic-import",
    "@babel/plugin-syntax-object-rest-spread",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "loose": true,
      },
    ],
    "@babel/flow",
    "@babel/react",
  ],
}
`;

exports[`babel-preset-nodely when no options provided should provide expected config 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    "@babel/plugin-proposal-optional-chaining",
    "@babel/plugin-syntax-dynamic-import",
    "@babel/plugin-syntax-object-rest-spread",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "loose": true,
      },
    ],
    "@babel/flow",
    "@babel/react",
  ],
}
`;

exports[`babel-preset-nodely when node targets passed in and loose set to false should provide expected config 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": false,
      },
    ],
    "@babel/plugin-proposal-optional-chaining",
    "@babel/plugin-syntax-dynamic-import",
    "@babel/plugin-syntax-object-rest-spread",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "loose": false,
        "targets": Object {
          "node": "6",
        },
      },
    ],
    "@babel/flow",
    "@babel/react",
  ],
}
`;

exports[`babel-preset-nodely when node targets passed in should provide expected config 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    "@babel/plugin-proposal-optional-chaining",
    "@babel/plugin-syntax-dynamic-import",
    "@babel/plugin-syntax-object-rest-spread",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "loose": true,
        "targets": Object {
          "node": "6",
        },
      },
    ],
    "@babel/flow",
    "@babel/react",
  ],
}
`;
